{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 53,
  "lineage": "f6c2ea91-6674-788d-4d54-ca4889b07b63",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_address",
      "name": "gitlab",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gitlab",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.69.130.102",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-11-26T22:08:06.431-08:00",
            "description": "Gitlab Ingress IP",
            "id": "projects/birdybrain/regions/us-central1/addresses/gitlab",
            "name": "gitlab",
            "network_tier": "PREMIUM",
            "project": "birdybrain",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/birdybrain/regions/us-central1/addresses/gitlab"
          },
          "dependencies": [
            "module.project_services.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "gitlab_sql",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.1.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2020-11-26T22:08:28.419-08:00",
            "id": "projects/birdybrain/global/addresses/gitlab-sql",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "gitlab-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/birdybrain/global/networks/gitlab",
            "prefix_length": 16,
            "project": "birdybrain",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/birdybrain/global/addresses/gitlab-sql"
          },
          "dependencies": [
            "google_compute_network.gitlab",
            "module.project_services.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gitlab",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/birdybrain/global/networks/gitlab",
            "mtu": 0,
            "name": "gitlab",
            "project": "birdybrain",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/birdybrain/global/networks/gitlab"
          },
          "dependencies": [
            "module.project_services.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-11-26T22:08:29.732-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/birdybrain/regions/us-central1/subnetworks/gitlab",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "gitlab",
            "network": "https://www.googleapis.com/compute/v1/projects/birdybrain/global/networks/gitlab",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "birdybrain",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.3.0.0/16",
                "range_name": "gitlab-cluster-pod-cidr"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "gitlab-cluster-service-cidr"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/birdybrain/regions/us-central1/subnetworks/gitlab"
          },
          "dependencies": [
            "google_compute_network.gitlab",
            "module.project_services.google_project_service.project_services"
          ]
        }
      ]
    }
  ]
}